renamed to Treville Pro

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 ===================================
-Wellington Pro Changelog
+Treville Pro Changelog
 ===================================
 
 Version 1.0
