--- a/languages/treville-pro.pot
+++ b/languages/treville-pro.pot
@@ -1,7 +1,7 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Wellington Pro\n"
+"Project-Id-Version: Treville Pro\n"
 "Report-Msgid-Bugs-To: https://themezee.com/\n"
 "POT-Creation-Date: 2017-03-28 11:38+0200\n"
 "PO-Revision-Date: 2016-05-31 09:50+0100\n"
@@ -403,6 +403,6 @@ msgid ""
 "this widget ONLY in the Magazine Homepage widget area."
 msgstr ""
 
-#: wellington-pro.php:211
+#: treville-pro.php:211
 msgid "Settings"
 msgstr ""
