--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,12 @@
 Treville Pro Changelog
 ===================================
 
+Version 1.1
+-----------------------------------
+* added Scroll-Back-to-Top Feature
+* updated color settings for Scroll Button
+* ignore sticky posts in Magazine Widgets
+
 Version 1.0
 -----------------------------------
 Initial Version
