--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,10 @@
 Treville Pro Changelog
 ===================================
 
+Version 1.6
+-----------------------------------
+* added support for the official AMP plugin
+
 Version 1.5.1
 -----------------------------------
 * fixed typography settings for navigation menus
