updated changelog and version number

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,13 @@
 Treville Pro Changelog
 ===================================
 
+Version 1.7
+-----------------------------------
+* added CSS variables for font styles
+* updated Typography options
+* added minified JavaScript files
+* restructured CSS media queries
+
 Version 1.6
 -----------------------------------
 * added support for the official AMP plugin
