--- a/languages/treville-pro-de_DE.po
+++ b/languages/treville-pro-de_DE.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Treville Pro\n"
 "Report-Msgid-Bugs-To: https://themezee.com/\n"
-"POT-Creation-Date: 2021-02-11 16:28+0100\n"
-"PO-Revision-Date: 2021-02-11 16:28+0100\n"
+"POT-Creation-Date: 2021-03-09 14:53+0100\n"
+"PO-Revision-Date: 2021-03-09 14:54+0100\n"
 "Last-Translator: \n"
 "Language-Team: ThemeZee <support@themezee.com>\n"
 "Language: de_DE\n"
@@ -184,47 +184,111 @@ msgstr "Alle Beiträge ansehen"
 msgid "Display Author Bio"
 msgstr "Autor Bio anzeigen"
 
-#: includes/modules/class-custom-colors.php:472
+#: includes/modules/class-block-colors.php:136
+msgid "Block Colors"
+msgstr "Block Farben"
+
+#: includes/modules/class-block-colors.php:153
+msgctxt "Color Option"
+msgid "Primary"
+msgstr "Primär"
+
+#: includes/modules/class-block-colors.php:169
+msgctxt "Color Option"
+msgid "Secondary"
+msgstr "Sekundär"
+
+#: includes/modules/class-block-colors.php:185
+msgctxt "Color Option"
+msgid "Tertiary"
+msgstr "Tertiär"
+
+#: includes/modules/class-block-colors.php:201
+msgctxt "Color Option"
+msgid "Accent"
+msgstr "Akzent"
+
+#: includes/modules/class-block-colors.php:217
+msgctxt "Color Option"
+msgid "Highlight"
+msgstr "Highlight"
+
+#: includes/modules/class-block-colors.php:233
+msgctxt "Color Option"
+msgid "Light Gray"
+msgstr "Hellgrau"
+
+#: includes/modules/class-block-colors.php:249
+msgctxt "Color Option"
+msgid "Gray"
+msgstr "Grau"
+
+#: includes/modules/class-block-colors.php:265
+msgctxt "Color Option"
+msgid "Dark Gray"
+msgstr "Dunkelgrau"
+
+#: includes/modules/class-custom-colors.php:176
 msgid "Theme Colors"
 msgstr "Theme Farben"
 
-#: includes/modules/class-custom-colors.php:489
-msgctxt "color setting"
+#: includes/modules/class-custom-colors.php:193
+msgctxt "Color Option"
 msgid "Header"
 msgstr "Header"
 
-#: includes/modules/class-custom-colors.php:505
-msgctxt "color setting"
+#: includes/modules/class-custom-colors.php:209
+msgctxt "Color Option"
 msgid "Main Navigation"
 msgstr "Hauptnavigation"
 
-#: includes/modules/class-custom-colors.php:521
-msgctxt "color setting"
-msgid "Links and Buttons"
-msgstr "Links und Buttons"
+#: includes/modules/class-custom-colors.php:225
+msgctxt "Color Option"
+msgid "Links"
+msgstr "Links"
 
-#: includes/modules/class-custom-colors.php:537
-msgctxt "color setting"
-msgid "Post Titles"
-msgstr "Beitrags-Titel"
+#: includes/modules/class-custom-colors.php:241
+msgctxt "Color Option"
+msgid "Link Hover"
+msgstr "Link-Hover"
 
-#: includes/modules/class-custom-colors.php:553
-msgctxt "color setting"
+#: includes/modules/class-custom-colors.php:257
+msgctxt "Color Option"
+msgid "Buttons"
+msgstr "Buttons"
+
+#: includes/modules/class-custom-colors.php:273
+msgctxt "Color Option"
+msgid "Button Hover"
+msgstr "Button-Hover"
+
+#: includes/modules/class-custom-colors.php:289
+msgctxt "Color Option"
+msgid "Titles"
+msgstr "Titel"
+
+#: includes/modules/class-custom-colors.php:305
+msgctxt "Color Option"
+msgid "Title Hover"
+msgstr "Titel-Hover"
+
+#: includes/modules/class-custom-colors.php:321
+msgctxt "Color Option"
 msgid "Borders"
 msgstr "Rahmen"
 
-#: includes/modules/class-custom-colors.php:569
-msgctxt "color setting"
+#: includes/modules/class-custom-colors.php:337
+msgctxt "Color Option"
 msgid "Widget Titles"
 msgstr "Widget-Titel"
 
-#: includes/modules/class-custom-colors.php:585
-msgctxt "color setting"
+#: includes/modules/class-custom-colors.php:353
+msgctxt "Color Option"
 msgid "Footer Widgets"
 msgstr "Footer Widgets"
 
-#: includes/modules/class-custom-colors.php:601
-msgctxt "color setting"
+#: includes/modules/class-custom-colors.php:369
+msgctxt "Color Option"
 msgid "Footer"
 msgstr "Footer"
 
@@ -412,9 +476,17 @@ msgstr "Magazin (Vertikale Box)"
 msgid "Displays your posts from a selected category in a vertical box."
 msgstr "Zeigt die Beiträge einer gewählten Kategorie in einer vertikalen Box."
 
-#: treville-pro.php:208
+#: treville-pro.php:238
 msgid "Settings"
 msgstr "Einstellungen"
+
+#~ msgctxt "color setting"
+#~ msgid "Links and Buttons"
+#~ msgstr "Links und Buttons"
+
+#~ msgctxt "color setting"
+#~ msgid "Post Titles"
+#~ msgstr "Beitrags-Titel"
 
 #~ msgid "Local Fonts"
 #~ msgstr "Lokale Schriftarten"
