updated changelog and version number

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,12 @@
 Treville Pro Changelog
 ===================================
 
+Version 1.9
+-----------------------------------
+* added svg icons for social icons menu
+* added svg icon for scroll to top button
+* updated RTL language stylesheet
+
 Version 1.8
 -----------------------------------
 * added CSS variables for colors
