--- a/languages/treville-pro-de_DE.po
+++ b/languages/treville-pro-de_DE.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Treville Pro\n"
 "Report-Msgid-Bugs-To: https://themezee.com/\n"
-"POT-Creation-Date: 2021-03-09 14:53+0100\n"
-"PO-Revision-Date: 2021-03-09 14:54+0100\n"
+"POT-Creation-Date: 2021-08-20 16:06+0200\n"
+"PO-Revision-Date: 2021-08-20 16:06+0200\n"
 "Last-Translator: \n"
 "Language-Team: ThemeZee <support@themezee.com>\n"
 "Language: de_DE\n"
@@ -377,25 +377,79 @@ msgstr "Footer Spalte 4"
 msgid "Appears on the fourth footer column."
 msgstr "Erscheint in der vierten Footer Spalte."
 
-#: includes/modules/class-header-area.php:104
+#: includes/modules/class-header-area.php:225
 msgid "Header Search"
 msgstr "Header Suche"
 
-#: includes/modules/class-header-area.php:119
+#: includes/modules/class-header-area.php:240
 msgid "Display search field in main navigation"
 msgstr "Suchfeld in Hauptnavigation anzeigen"
 
-#: includes/modules/class-header-area.php:140
+#: includes/modules/class-header-area.php:261
 msgid "Social Icons"
 msgstr "Social Icons"
 
-#: includes/modules/class-scroll-to-top.php:67
+#: includes/modules/class-scroll-to-top.php:81
 msgid "Scroll to Top"
 msgstr "Nach oben scrollen"
 
-#: includes/modules/class-scroll-to-top.php:83
+#: includes/modules/class-scroll-to-top.php:97
 msgid "Display Scroll to Top Button"
 msgstr "Button zum Nach oben Scrollen anzeigen"
+
+#: includes/modules/class-widget-areas.php:112
+msgid "Before Header"
+msgstr "Vor dem Header"
+
+#: includes/modules/class-widget-areas.php:114
+msgctxt "widget area description"
+msgid "Appears above the header area."
+msgstr "Erscheint über dem Header-Bereich."
+
+#: includes/modules/class-widget-areas.php:123
+msgid "After Header"
+msgstr "Nach dem Header"
+
+#: includes/modules/class-widget-areas.php:125
+msgctxt "widget area description"
+msgid "Appears below the header area."
+msgstr "Erscheint unter dem Header-Bereich."
+
+#: includes/modules/class-widget-areas.php:134
+msgid "Before Latest Blog Posts"
+msgstr "Vor den letzten Blog-Beiträgen"
+
+#: includes/modules/class-widget-areas.php:136
+msgctxt "widget area description"
+msgid "Appears on the blog page above the latest posts."
+msgstr "Erscheint auf der Blog-Seite über den neuesten Beiträgen."
+
+#: includes/modules/class-widget-areas.php:145
+msgid "After Single Posts"
+msgstr "Nach einzelnen Beiträgen"
+
+#: includes/modules/class-widget-areas.php:147
+msgctxt "widget area description"
+msgid "Appears below single posts."
+msgstr "Erscheint unter einzelnen Beiträgen."
+
+#: includes/modules/class-widget-areas.php:156
+msgid "After Static Pages"
+msgstr "Nach statischen Seiten"
+
+#: includes/modules/class-widget-areas.php:158
+msgctxt "widget area description"
+msgid "Appears below static pages."
+msgstr "Erscheint unter statischen Seiten."
+
+#: includes/modules/class-widget-areas.php:167
+msgid "Before Footer"
+msgstr "Vor dem Footer"
+
+#: includes/modules/class-widget-areas.php:169
+msgctxt "widget area description"
+msgid "Appears above the footer area."
+msgstr "Erscheint über dem Footer-Bereich."
 
 #: includes/widgets/widget-magazine-horizontal-box.php:24
 #: includes/widgets/widget-magazine-horizontal-box.php:39
@@ -476,7 +530,7 @@ msgstr "Magazin (Vertikale Box)"
 msgid "Displays your posts from a selected category in a vertical box."
 msgstr "Zeigt die Beiträge einer gewählten Kategorie in einer vertikalen Box."
 
-#: treville-pro.php:238
+#: treville-pro.php:239
 msgid "Settings"
 msgstr "Einstellungen"
 
