--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,10 @@
 Treville Pro Changelog
 ===================================
 
+Version 2.0.1
+-----------------------------------
+* fixed styling of header search icon
+
 Version 2.0
 -----------------------------------
 * added extra widget areas
