updated changelog and version number

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,11 @@
 Treville Pro Changelog
 ===================================
 
+Version 2.0.2
+-----------------------------------
+* added Steam and Discord to social icons
+* updated Scroll to Top button script to use vanilla js
+
 Version 2.0.1
 -----------------------------------
 * fixed styling of header search icon
