--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,10 @@
 Treville Pro Changelog
 ===================================
 
+Version 2.0.3
+-----------------------------------
+* updated aria labels to improve accessibility
+
 Version 2.0.2
 -----------------------------------
 * added Steam and Discord to social icons
